New configuration system roughly based on YAMLer. Elevators now works; however, it is hard to test with no command yet to get one. That will be next :)